Fixed stretched-out background issue

--- a/src/components/IntroSection/IntroSection.scss
+++ b/src/components/IntroSection/IntroSection.scss
@@ -6,7 +6,7 @@
     align-items: center;
 
     @media (min-width: 992px) {
-        margin-top: 1em;
+        padding: 2em 2em;
         flex-direction: row;
     }    
 }
